force-app/main/default/objects/Visitor__c/fields/Visiting_Time__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Time__c</fullName>
    <label>Visiting Time</label>
    <type>Time</type>
</CustomField>