force-app/main/default/objects/Visitor__c/fields/Visitors_Age__c.field-meta.xml
<CustomField>
    <fullName>Visitors_Age__c</fullName>
    <label>Visitors Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>