force-app/main/default/objects/Visitor__c/fields/Visitors_Name__c.field-meta.xml
<CustomField>
    <fullName>Visitors_Name__c</fullName>
    <label>Visitors Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>